--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=inventory-service
 spring.datasource.url=jdbc:postgresql://localhost:5432/inventory_service_db?useSSL=false
 spring.datasource.username=postgres
 spring.datasource.password=Mugisha12!
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8082
