--- a/inventory-service/pom.xml
+++ b/inventory-service/pom.xml
@@ -28,8 +28,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>3.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
