ft: add load balancer

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -4,4 +4,11 @@ spring.datasource.username=postgres
 spring.datasource.password=Mugisha12!
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/
+logging.level.io.netty=DEBUG
+logging.level.reactor.netty=DEBUG
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.cloud.discovery.enabled=true
+eureka.instance.prefer-ip-address=true
