--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/
 server.port=8761
-spring.application.name=discovery-server
+spring.application.name=eureka-server
 spring.freemarker.template-loader-path= classpath:/templates/
-spring.freemarker.prefer-file-system-access= false
+spring.freemarker.prefer-file-system-access=false
+eureka.instance.prefer-ip-address=true
