--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -3,5 +3,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/inventory_service_db?useS
 spring.datasource.username=postgres
 spring.datasource.password=Mugisha12!
 spring.jpa.hibernate.ddl-auto=create-drop
-server.port=8082
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+server.port=0
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.cloud.discovery.enabled=true
+eureka.instance.prefer-ip-address=true
