fix: inventory service and order service communication

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=Mugisha12!
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
-eureka.client.service-url.defaultZone=http://localhost:8761/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 logging.level.io.netty=DEBUG
 logging.level.reactor.netty=DEBUG
 
