ft: define all apis definition in api gateway service

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,3 +3,29 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
+
+## PRODUCT SERVICE ROUTE
+spring.cloud.gateway.mvc.routes[0].id=product-service
+spring.cloud.gateway.mvc.routes[0].uri=lb://product-service
+spring.cloud.gateway.mvc.routes[0].predicates[0]=path=api/products/**
+
+## ORDER SERVICE ROUTE
+spring.cloud.gateway.mvc.routes[1].id=order-service
+spring.cloud.gateway.mvc.routes[1].uri=lb://order-service
+spring.cloud.gateway.mvc.routes[1].predicates[0]=path=api/orders/**
+
+## INVENTORY SERVICE ROUTE
+spring.cloud.gateway.mvc.routes[2].id=inventory-service
+spring.cloud.gateway.mvc.routes[2].uri=lb://inventory-service
+spring.cloud.gateway.mvc.routes[2].predicates[0]=path=api/inventory/**
+
+## DISCOVERY SERVICE ROUTE
+spring.cloud.gateway.mvc.routes[3].id=discovery-service
+spring.cloud.gateway.mvc.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.mvc.routes[3].predicates[0]=path=eureka/web
+spring.cloud.gateway.mvc.routes[3].filters[0]=setPath=/
+
+## DISCOVERY SERVICE STATIC RESOURCES ROUTE
+spring.cloud.gateway.mvc.routes[4].id=discovery-service-static
+spring.cloud.gateway.mvc.routes[4].uri=http://localhost:8761
+spring.cloud.gateway.mvc.routes[4].predicates[0]=path=eureka/**
