--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/
 server.port=8761
-spring.application.name=eureka-server
+spring.application.name=discovery-service
 spring.freemarker.template-loader-path= classpath:/templates/
 spring.freemarker.prefer-file-system-access=false
 eureka.instance.prefer-ip-address=true
