ft: add keycloak configuration

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.cloud.gateway.mvc.routes[3].filters[0]=setPath=/
 spring.cloud.gateway.mvc.routes[4].id=discovery-service-static
 spring.cloud.gateway.mvc.routes[4].uri=http://localhost:8761
 spring.cloud.gateway.mvc.routes[4].predicates[0]=path=eureka/**
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:8181/realms/quarks-be
