ft: authorise eureka/web

--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.application.name=discovery-service
 spring.freemarker.template-loader-path= classpath:/templates/
 spring.freemarker.prefer-file-system-access=false
 eureka.instance.prefer-ip-address=true
+spring.security.user.name=eureka
+spring.security.user.password=password
