--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=Mugisha12!
 spring.jpa.hibernate.ddl-auto=create-drop
 server.port=0
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.cloud.discovery.enabled=true
