--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -31,3 +31,5 @@ spring.cloud.gateway.mvc.routes[4].uri=http://localhost:8761
 spring.cloud.gateway.mvc.routes[4].predicates[0]=path=eureka/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://127.0.0.1:8181/realms/quarks-be
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
