--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.data.mongodb.uri=mongodb://localhost:27017/product-service
 eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
 server.port=0
+
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
