--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -10,4 +10,4 @@ eureka.instance.prefer-ip-address=true
 spring.security.user.name=eureka
 spring.security.user.password=password
 spring.zipkin.base-url=http://localhost:9411
-spring.sleuth.sampler.probability=1.0
+management.tracing.sampling.probability=1.0
