--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -10,4 +10,4 @@ eureka.client.fetch-registry=true
 spring.cloud.discovery.enabled=true
 eureka.instance.prefer-ip-address=true
 spring.zipkin.base-url=http://localhost:9411
-spring.sleuth.sampler.probability=1.0
+management.tracing.sampling.probability=1.0
