--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -5,4 +5,4 @@ eureka.instance.prefer-ip-address=true
 server.port=0
 
 spring.zipkin.base-url=http://localhost:9411
-spring.sleuth.sampler.probability=1.0
+management.tracing.sampling.probability=1.0
