--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -42,4 +42,4 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.template.default-topic=notificationTopic
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.producer.properties.spring.json.type.mapping=event:com.programmingtechie.order_service.event
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.programmingtechie.order_service.event.OrderPlacedEvent
