ft: push service images to docker hub

--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
                         <image>eclipse-temurin:17.0.4.1_1-jre</image>
                     </from>
                     <to>
-                        <image>microservices-tutorial/${project.artifactId}</image>
+                        <image>registry.hub.docker.com/misaac/${project.artifactId}</image>
                     </to>
                 </configuration>
                 <executions>
