--- a/inventory-service/src/main/resources/application.docker.properties
+++ b/inventory-service/src/main/resources/application.docker.properties
@@ -1,5 +1,7 @@
 server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/inventory_service_db?useSSL=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=Mugisha12!
