--- a/product-service/src/main/resources/application.docker.properties
+++ b/product-service/src/main/resources/application.docker.properties
@@ -4,3 +4,6 @@ spring.data.mongodb.database=product-service
 server.port=8080
 management.zipkin.tracing.endpoint=http://zipkin:9411
 eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka
+
+logging.level.io.netty=DEBUG
+logging.level.reactor.netty=DEBUG
