--- a/order-service/src/main/resources/application.docker.properties
+++ b/order-service/src/main/resources/application.docker.properties
@@ -1,6 +1,8 @@
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5432/order_service_db?useSSL=false
+spring.datasource.url=jdbc:postgresql://postgres-order:5431/order_service_db
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=postgres
 spring.datasource.password=Mugisha12!
 management.zipkin.tracing.endpoint=http://zipkin:9411
