--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.active=docker
 spring.application.name=product-service
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
 eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
@@ -6,3 +7,6 @@ server.port=0
 
 spring.zipkin.base-url=http://localhost:9411
 management.tracing.sampling.probability=1.0
+
+logging.level.io.netty=DEBUG
+logging.level.reactor.netty=DEBUG
