--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build-test:
+  build:
 
     runs-on: ubuntu-latest
 
@@ -32,7 +32,7 @@ jobs:
 
   publish-job:
     runs-on: ubuntu-latest
-    needs: build_test
+    needs: build
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
