fix: Hibernate dialect

--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=inventory-service
 spring.datasource.url=jdbc:postgresql://localhost:5432/inventory_service_db?useSSL=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
 spring.datasource.password=Mugisha12!
 spring.jpa.hibernate.ddl-auto=create-drop
