--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=order-service
 spring.datasource.url=jdbc:postgresql://localhost:5432/order_service_db?useSSL=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
 spring.datasource.password=Mugisha12!
 spring.jpa.hibernate.ddl-auto=update
