--- a/api-gateway/src/main/resources/application.docker.properties
+++ b/api-gateway/src/main/resources/application.docker.properties
@@ -1,5 +1,5 @@
 server.port=8080
-eureka.client.serviceUrl.defaultZone=http://eureka:password@discovery-service:8761
+eureka.client.serviceUrl.defaultZone=http://eureka:password@discovery-service:8761/eureka
 spring.security.oauth2.resourceserver.jwt.issuer-uri= http://keycloak:8080/realms/quarks-be
 management.zipkin.tracing.endpoint=http://zipkin:9411
 app.eureka-server=discovery-service
