--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=api-gateway
+spring.profiles.active=docker
 eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator=INFO
