--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.active=docker
 spring.application.name=inventory-service
 spring.datasource.url=jdbc:postgresql://localhost:5432/inventory_service_db?useSSL=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
