--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=order-service
+spring.profiles.active=docker
 spring.datasource.url=jdbc:postgresql://localhost:5432/order_service_db?useSSL=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
