--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.profiles.active=docker
+spring.profiles.active=docker
 spring.application.name=product-service
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
 eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
